verification/v3_impacts1_adjsens/build/genmake.log
Get compiler version using: mpif77 --version
/opt/intel/oneapi/mpi/2021.9.0/bin/mpif77
ifx (IFX) 2023.1.0 20230320
Copyright (C) 1985-2023 Intel Corporation. All rights reserved.

<-- compiler version ----

running: check_fortran_compiler
 mpif77 -132 -W0 -WB -m64 -convert big_endian -assume byterecl -fPIC -no-wrap-margin -mcmodel=large -O2 -fp-model precise -align -xCORE-AVX2 -traceback -c genmake_tcomp.f
 mpif90 -shared-intel -no-ipo -132 -W0 -WB -m64 -convert big_endian -assume byterecl -fPIC -no-wrap-margin -mcmodel=large -O2 -fp-model precise -align -xCORE-AVX2 -traceback -o genmake_tcomp genmake_tcomp.o -I/opt/intel/oneapi/mpi/2021.9.0/lib -Wl,--no-relax -L/opt/intel/oneapi/mpi/2021.9.0/lib -lmpifort -Wl,--no-relax -L/opt/ohpc/pub/libs/intel/impi/netcdf-fortran/4.6.1/lib -L/opt/ohpc/pub/libs/intel/impi/netcdf/4.9.2/lib -lnetcdf -lnetcdff
 mpirun -np 1 ./genmake_tcomp
 hello world :            1
 hello world :            2
 hello world :            3
 --> set FC_CHECK= 5 /5

running: look_for_makedepend()
 --> set MAKEDEPEND=$(TOOLSDIR)/xmakedepend

running: check_HAVE_CLOC()
 running: get_fortran_c_namemangling()
 mpicc -O0 -m64 -xCORE-AVX2 -fPIC -mcmodel=medium -c genmake_test.c
genmake_test.c:1:31: error: call to undeclared function 'tsub'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
void tcall( char * string ) { tsub( string ); }
                              ^
1 error generated.

 WARNING: C test compile fails
 WARNING: We'll try to use: FC_NAMEMANGLE='#define FC_NAMEMANGLE(X) X ## _'
 WARNING: Please contact <MITgcm-support@mitgcm.org> if you need help here
mpicc -O0 -m64 -xCORE-AVX2 -fPIC -mcmodel=medium -c genmake_tc_1.c
mpif77 -132 -W0 -WB -m64 -convert big_endian -assume byterecl -fPIC -no-wrap-margin -mcmodel=large -o genmake_tc genmake_tc_2.f genmake_tc_1.o
  HELLO WORLD   1746824670.53636     
 --> set HAVE_CLOC='t'

running: check_HAVE_SETRLSTK()
mpicc -O0 -m64 -xCORE-AVX2 -fPIC -mcmodel=medium -c genmake_tc_1.c
      program hello
      external setrlstk
      call setrlstk()
      end
mpif77 -132 -W0 -WB -m64 -convert big_endian -assume byterecl -fPIC -no-wrap-margin -mcmodel=large -o genmake_tc genmake_tc_2.f genmake_tc_1.o
 --> set HAVE_SETRLSTK='t'

running: check_HAVE_SIGREG()
mpicc -O0 -m64 -xCORE-AVX2 -fPIC -mcmodel=medium -c genmake_tc_1.c
genmake_tc_1.c:11:44: warning: declaration of 'struct ucontext' will not be visible outside of this function [-Wvisibility]
    unsigned int sn, siginfo_t  si, struct ucontext *sc )
                                           ^
1 warning generated.
      program hello
      integer anint
      common /iv/ anint
      external sigreg
      call sigreg(anint)
      end
mpif77 -132 -W0 -WB -m64 -convert big_endian -assume byterecl -fPIC -no-wrap-margin -mcmodel=large -o genmake_tc genmake_tc_2.f genmake_tc_1.o
 --> set HAVE_SIGREG='t'

running: check_HAVE_STAT()
mpicc -O0 -m64 -xCORE-AVX2 -fPIC -mcmodel=medium -c genmake_tc_1.c
      program hello
      integer nbyte
      call tfsize(nbyte)
      print *," HELLO WORLD", nbyte
      end
mpif77 -132 -W0 -WB -m64 -convert big_endian -assume byterecl -fPIC -no-wrap-margin -mcmodel=large -o genmake_tc genmake_tc_2.f genmake_tc_1.o
 --> set HAVE_STAT='t'

running: check_netcdf_libs()
===  genmake_tnc.F  >>>
      program fgennc
#include "netcdf.inc"
      integer iret, ncid, xid
      iret = nf_create('genmake_tnc.nc', NF_CLOBBER, ncid)
      IF (iret .NE. NF_NOERR) write(*,*) NF_STRERROR(iret)
      iret = nf_def_dim(ncid, 'X', 11, xid)
      IF (iret .NE. NF_NOERR) write(*,*) NF_STRERROR(iret)
      iret = nf_close(ncid)
      IF (iret .NE. NF_NOERR) write(*,*) NF_STRERROR(iret)
      end
<<<  genmake_tnc.F  ===
cat genmake_tnc.F |  cpp -traditional -P  -DWORDLENGTH=4 -DNML_TERMINATOR -DALLOW_USE_MPI -DHAVE_SYSTEM -DHAVE_FDATE -DHAVE_ETIME_FCT -DHAVE_CLOC -DHAVE_SETRLSTK -DHAVE_SIGREG -DHAVE_STAT  -I/opt/intel/oneapi/mpi/2021.9.0/include -I/opt/ohpc/pub/libs/intel/impi/netcdf-fortran/4.6.1/include -I/opt/ohpc/pub/libs/intel/impi/netcdf/4.9.2/include
mpif77 -132 -W0 -WB  -m64 -convert big_endian -assume byterecl -fPIC -no-wrap-margin -mcmodel=large  -O2 -fp-model precise -align -xCORE-AVX2 -traceback -c genmake_tnc.f  \ 
  &&  mpif90 -shared-intel -no-ipo -132 -W0 -WB  -m64 -convert big_endian -assume byterecl -fPIC -no-wrap-margin -mcmodel=large  -O2 -fp-model precise -align -xCORE-AVX2 -traceback -o genmake_tnc genmake_tnc.o  -I/opt/intel/oneapi/mpi/2021.9.0/lib -Wl,--no-relax -L/opt/intel/oneapi/mpi/2021.9.0/lib -lmpifort -Wl,--no-relax -L/opt/ohpc/pub/libs/intel/impi/netcdf-fortran/4.6.1/lib -L/opt/ohpc/pub/libs/intel/impi/netcdf/4.9.2/lib -lnetcdf -lnetcdff
check_netcdf: successful
 --> set HAVE_NETCDF='t'

running: check_HAVE_FLUSH()
  check_HAVE_FLUSH: successful
 --> set HAVE_FLUSH='t'
